<?xml version="1.0" encoding="UTF-8"?>
<!--
    Copyright (c) 2025, RTE (http://www.rte-france.com)
    This Source Code Form is subject to the terms of the Mozilla Public
    License, v. 2.0. If a copy of the MPL was not distributed with this
    file, You can obtain one at http://mozilla.org/MPL/2.0/.
-->
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.powsybl</groupId>
        <artifactId>powsybl-parent</artifactId>
        <version>28</version>
        <relativePath/>
    </parent>

    <groupId>org.gridsuite</groupId>
    <artifactId>gridsuite-computation</artifactId>
    <version>2.6.0-SNAPSHOT</version>

    <packaging>jar</packaging>
    <name>Computation library</name>
    <description>Common library for common computation and result filtering.</description>
    <url>http://www.gridsuite.org/</url>

    <scm>
        <connection>scm:git:https://github.com/gridsuite/computation.git</connection>
        <developerConnection>scm:git:https://github.com/gridsuite/computation.git</developerConnection>
        <url>https://github.com/gridsuite/computation</url>
    </scm>

    <developers>
        <developer>
            <name>Rehili Ghazwa</name>
            <email>ghazwa.rehili_externe@rte-france.com</email>
            <organization>RTE</organization>
            <organizationUrl>http://www.rte-france.com</organizationUrl>
        </developer>
    </developers>

    <properties>
        <!-- FIXME to remove when powsybl-parent supports JDK25 -->
        <java.version>25</java.version>
        <maven.jacoco.version>0.8.15</maven.jacoco.version>
        <checkstyle.version>13.8.0</checkstyle.version>
        <powsybl-ws-dependencies.version>2.34.0</powsybl-ws-dependencies.version>
        <gridsuite-filter.version>1.29.0</gridsuite-filter.version>
        <org.hamcrest.version>2.2</org.hamcrest.version>
        <spring-cloud-aws.version>3.4.2</spring-cloud-aws.version>
        <sonar.organization>gridsuite</sonar.organization>
        <sonar.projectKey>org.gridsuite:computation</sonar.projectKey>
        <aws-sdk.version>2.29.52</aws-sdk.version>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>templating-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>buildnumber-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-ws-dependencies</artifactId>
                <version>${powsybl-ws-dependencies.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- project specific dependencies -->
            <dependency>
                <groupId>io.awspring.cloud</groupId>
                <artifactId>spring-cloud-aws-starter-s3</artifactId>
                <version>${spring-cloud-aws.version}</version>
            </dependency>

            <dependency>
                <groupId>org.gridsuite</groupId>
                <artifactId>gridsuite-filter</artifactId>
                <version>${gridsuite-filter.version}</version>
            </dependency>

            <dependency>
                <groupId>org.hamcrest</groupId>
                <artifactId>hamcrest</artifactId>
                <version>${org.hamcrest.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- ============================================= -->
        <!-- COMPILATION DEPENDENCIES                      -->
        <!-- ============================================= -->

        <!-- downgrade of sdk from 2.31.78 to 2.29.52 is needed since spring-cloud-aws-starter-s3 3.3 to 3.4 upgrade -->
        <!-- See https://github.com/aws/aws-sdk-java-v2/discussions/5802  -->
        <!-- Is there an easier way to to be compatible with 3rd party aws implementations? -->
        <!-- maybe we should look for a less opinionated/more compatible s3 client than awssdk ? -->
        <dependency>
            <groupId>software.amazon.awssdk</groupId>
            <artifactId>s3</artifactId>
            <version>${aws-sdk.version}</version>
        </dependency>

        <!-- Jackson -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
        </dependency>

        <!-- Jakarta APIs -->
        <dependency>
            <groupId>jakarta.validation</groupId>
            <artifactId>jakarta.validation-api</artifactId>
        </dependency>
        <dependency>
            <groupId>jakarta.persistence</groupId>
            <artifactId>jakarta.persistence-api</artifactId>
        </dependency>

        <!-- Spring Framework -->
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-messaging</artifactId>
        </dependency>

        <!-- Spring Data -->
        <dependency>
            <groupId>org.springframework.data</groupId>
            <artifactId>spring-data-jpa</artifactId>
        </dependency>

        <!-- Spring Cloud -->
        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-stream</artifactId>
        </dependency>
        <dependency>
            <groupId>io.awspring.cloud</groupId>
            <artifactId>spring-cloud-aws-starter-s3</artifactId>
        </dependency>

        <!-- AMQP - rabbitmq -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-amqp</artifactId>
        </dependency>

        <!-- AspectJ -->
        <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjweaver</artifactId>
            <optional>true</optional>
        </dependency>

        <!-- Micrometer -->
        <dependency>
            <groupId>io.micrometer</groupId>
            <artifactId>micrometer-core</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>io.micrometer</groupId>
            <artifactId>context-propagation</artifactId>
        </dependency>

        <!-- Powsybl -->
        <dependency>
            <groupId>com.powsybl</groupId>
            <artifactId>powsybl-ws-commons</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>com.powsybl</groupId>
            <artifactId>powsybl-network-store-client</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>com.powsybl</groupId>
            <artifactId>powsybl-security-analysis-api</artifactId>
            <optional>true</optional>
        </dependency>

        <!-- GridSuite -->
        <dependency>
            <groupId>org.gridsuite</groupId>
            <artifactId>gridsuite-filter</artifactId>
        </dependency>

        <!-- ============================================= -->
        <!-- PROVIDED DEPENDENCIES                         -->
        <!-- ============================================= -->

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>

        <!-- ============================================= -->
        <!-- TEST DEPENDENCIES                             -->
        <!-- ============================================= -->

        <!-- JUnit -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- Mockito -->
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- AssertJ -->
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- Hamcrest -->
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- JSON Assert -->
        <dependency>
            <groupId>org.skyscreamer</groupId>
            <artifactId>jsonassert</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- Spring Boot Test -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-test-autoconfigure</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- In memory file system for read/write files testing -->
        <dependency>
            <groupId>com.google.jimfs</groupId>
            <artifactId>jimfs</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
